<resources>

    <string name="app_name">dev-challenge-2016</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="score">Score</string>
    <string name="defaultTime">mm-ss-sss</string>
    <string name="oneSymbol">1</string>
    <string name="longText">
В районе авиакатастрофы Боинга в Ростове синоптики зафиксировали редкое природное явление - \"струйное течение\".
Об этом сообщил специалист центра погоды Евгений Тишковец.
По его словам, погоду на момент катастрофы определяла южная периферия мощного атлантического циклона.
При этом нижняя кромка облачности была на уровне 300-600 м, скорость ветра в течение ночи составляла 12-14 м/с, при порывах достигая 18-19 м/с.
В то же время на высоте от 600 до 10 тыс. м наблюдалось \"струйное течение\", в котором скорость ветрового потока обычно превышает 100 км/ч, отметил Тишковец.
\"В данной ситуации скорость этого ветра варьировалась от 104 км/ч на высоте 600 метров до 162 км/ч на высотах 5-7 тыс. м.
Скорость ветра 104 км/ч на высоте 600 метров - это около 30 м/с, это скорость ураганного ветра.
Конечно, он мог повлиять на динамику полета\", - цитирует его РБК.
Анализ переговоров экипажа Boeing с диспетчерами показал, что проблем на борту до самой катастрофы не было.
Голоса пилотов были спокойные, они не сообщали о проблемах Как сообщалось, Boeing 737-800 разбился при заходе на посадку.
Самолет выполнял рейс из Дубая в Ростов-на-Дону. На борту находились 55 пассажиров и 6 членов экипажа.
Среди основных версий катастрофы - плохие погодные условия, ошибка пилотов, а также техническая неисправность.

\nОснователь сети Facebook Марк Цукерберг заявил, что в ближайшие 10-15 лет в мире появятся новые виды компьютеров.
Такое предположение он сделал в рамках мероприятия China Development Forum 2016, передает China Daily.
ПО ТЕМЕ
Цукерберг отреагировал на просьбу Уэста о миллиарде
18 февраля 2016, 11:54
"Сейчас в нашем распоряжении есть ноутбуки, настольные компьютеры и смартфоны. Однако каждые 15 лет происходит обновление вычислительной платформы", - отметил Марк Цукерберг.
Своими мыслями на счет грядущей модификации компьютеров Цукерберг поделился в диалоге с Джеком Ма, основателем крупного онлайн-ретейлера Alibaba.
ИГИЛ угрожает основателям Facebook и Twitter
"Некоторые волнуются, что машины вытеснят людей и у них не будет работы. Но машина вряд ли будет такой же, как и человек. Мне кажется, что не стоит волноваться", - заявил предприниматель.
Ранее сообщалось, что Марк Цукерберг решил создать искусственный интеллект для помощи по дому.
</string>
    <string name="descButtonUp">button up</string>
    <string name="descCentralImage">central image</string>
    <string name="descButtonDown">button down</string>
    <string name="descButtonLeft">button left</string>
    <string name="descButtonRight">button right</string>
    <string name="setSpeed">Set speed</string>
    <string name="speedVerySlow">1 - very slow</string>
    <string name="speedSlow">2 - slow</string>
    <string name="speedNormal">3 - normal</string>
    <string name="speedFast">4 - fast</string>
    <string name="speedVeryFast">5 - very fast</string>

</resources>