<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tryings.my.dev_challenge_2016.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/flMain"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvMainField"
            android:text="@string/space"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textIsSelectable="false"
            android:typeface="monospace" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvTime"
            style="@style/MyText"
            android:text="@string/defaultTime" />

        <Button
            android:id="@+id/bStartPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvScore"
            style="@style/MyText"
            android:text="@string/score" />

    </LinearLayout>

</LinearLayout>